fix rendering of example tabs on firefox

--- a/admin-ui/app/styles/ups.less
+++ b/admin-ui/app/styles/ups.less
@@ -161,7 +161,9 @@ a.ups-tip-panel-link {
 .ups-code-block {
   overflow: scroll;
   width: 100%;
+  clear: both;
   pre {
+    background-color: #555 !important;
     padding: 0;
     code {
       font-family: monospace;
